# AlphaImpute

./: .gitignore  .gitmodules  AlphaImpute.f90  CMakeLists.txt  GeneProbForAlphaImpute.f90  HaplotypeBits.f90  Imputation.f90  Output.f90  PhaseRounds.f90  README.rst  alphaimpute.py  compile.sh  global.f90  hmm.f90  hmmHaplotype.f90  hmmvariables.f90  make_zip_file.sh  makefile  makefile_old  par_zig_mod.f90  random.f90  recombination.f90  utils.f90
cmake/modules/: SetFortranFlags.cmake  findMKL.cmake  findPFUnit.cmake
example/: AlphaImputeSpec.txt
scripts/: QGeneProb.sh  runner.sh
src/: AlphaImpute.f90  AlphaImputeInMod.f90  AlphaImputeInputOutput.f90  AlphaImputeSpecFileModule.f90  AlphaimputeInputOutput.f90  CMakeLists.txt  CmakeLists.txt  GeneProbForAlphaImpute.f90  HaplotypeBits.f90  HeuristicGeneprob.f90  Imputation.f90  InputMod.f90  Output.f90  PhaseRounds.f90  global.f90  hmm.f90  hmmHaplotype.f90  hmmvariables.f90  informationModule.f90  main.f90  manageWindows.f90  par_zig_mod.f90  random.f90  recombination.f90  utils.f90
tests/: testReadSpecAlphaImpute.pf
